    + complete copyright/licensing information for all files in inc/
  * watch: do not limit upstream source location to its current author
  * add debian/repack.sh for repackaging upstream sources
    + this is due to unlicensed source files in inc/src as well as the
      resulting inc/bin/patch.exe
    + hook debian/repack.sh to debian/watch

 -- Damyan Ivanov <dmn@debian.org>  Tue, 28 Apr 2009 22:50:13 +0300

libalien-wxwidgets-perl (0.42-1) unstable; urgency=low

  [ Roberto C. Sanchez ]
  * New upstream release
  * Add a Build-Depends on libextutils-cbuilder-perl (>= 0.24)

  [ gregor herrmann ]
  * debian/control: Changed: Switched Vcs-Browser field to ViewSVN
    (source stanza).

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 18 Nov 2008 19:47:29 -0500

libalien-wxwidgets-perl (0.41-1) unstable; urgency=low

  * New upstream release

 -- Roberto C. Sanchez <roberto@connexer.com>  Wed, 29 Oct 2008 23:04:03 -0400

libalien-wxwidgets-perl (0.39-1) unstable; urgency=low

  * New upstream release
  * rules: fir target dependencies for parallel builds
  * upload to unstable

 -- Damyan Ivanov <dmn@debian.org>  Mon, 15 Sep 2008 10:01:55 +0300

libalien-wxwidgets-perl (0.37-2) experimental; urgency=low

  * Bump (build-)dependencies on Wx to 2.8.
  * Upload to experimental

 -- Damyan Ivanov <dmn@debian.org>  Thu, 31 Jul 2008 09:24:24 +0300

libalien-wxwidgets-perl (0.37-1) unstable; urgency=low

  * New upstream release
  * Update to Standards-Version 3.8.0 (no changes)

 -- Roberto C. Sanchez <roberto@connexer.com>  Mon, 30 Jun 2008 18:08:09 -0400

libalien-wxwidgets-perl (0.36-1) unstable; urgency=low

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 20 May 2008 16:11:33 -0400

libalien-wxwidgets-perl (0.35-1) unstable; urgency=low

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 04 May 2008 16:53:20 -0400

libalien-wxwidgets-perl (0.34-1) unstable; urgency=low

  * New upstream release.